# think-bayes

./: README.md  main.py  pyproject.toml
notebooks/: chapter01.ipynb
